tests/errors/erro_constante.lua
function void main()
    const PI: number = 3.14159;
    
    print(PI);
    
    -- Erro: atribuicao a constante
    PI = 3.14;
end
